--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.44-bin.jar"/>
 	<classpathentry kind="lib" path="lib/opentest4j-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/spring-aop-4.3.12.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-aspects-4.3.12.RELEASE.jar"/>
@@ -30,5 +33,6 @@
 	<classpathentry kind="lib" path="lib/spring-webmvc-4.3.12.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-webmvc-portlet-4.3.12.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-websocket-4.3.12.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/LAVORO/CONTRADER/PROJECT/redman/lib/mysql-connector-java-5.1.46-bin.jar"/>
 	<classpathentry kind="output" path="out/production/ContraderFramework"/>
 </classpath>
