--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,6 @@ db.vendor=mysql
 db.driver=com.mysql.jdbc.Driver
 db.host=127.0.0.1
 db.port=3306
-db.name=contrader2
+db.name=redman
 db.username=root
 db.password=root
