--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <version>1.0</version>
 
     <!--  How are we packaging - jar, war, ear -->
-    <packaging>war</packaging>
+   	<packaging>war</packaging>
 
     <!--  This is optional, used for any local names for the project. Can be "softer" than the artifactId -->
     <name>redMan</name>
@@ -24,13 +24,14 @@
     <url>http://redMan.virtualpairprogrammers.com</url>
 
     <!--  And now, a list of Maven projects that we depend upon -->
-    <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
+    <dependencies><!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+    <scope>provided</scope>
+</dependency>
+
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
