Lista nodi e registra utenti (prova) per admin

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,16 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<servlet>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>com.virtualpairprogrammers.servlets.LogoutServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>com.virtualpairprogrammers.servlets.RegisterServlet</servlet-class>
+	</servlet>
 
 	<servlet>
 		<servlet-name>HelloWorldServlet</servlet-name>
@@ -15,6 +25,11 @@
 	<servlet>
 		<servlet-name>UtentiServlet</servlet-name>
 		<servlet-class>com.virtualpairprogrammers.servlets.UtentiServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>NodesServlet</servlet-name>
+		<servlet-class>com.virtualpairprogrammers.servlets.NodesServlet</servlet-class>
 	</servlet>
 
 	<servlet>
@@ -31,10 +46,25 @@
 		<servlet-name>LoginTraderServlet</servlet-name>
 		<url-pattern>/LoginTraderServlet</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/LogoutServlet</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/RegisterServlet</url-pattern>
+	</servlet-mapping>
 
 	<servlet-mapping>
 		<servlet-name>UtentiServlet</servlet-name>
 		<url-pattern>/UtentiServlet</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>NodesServlet</servlet-name>
+		<url-pattern>/NodesServlet</url-pattern>
 	</servlet-mapping>
 
 	<session-config>
