--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,11 @@
 	</servlet>
 
 	<servlet>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>com.virtualpairprogrammers.servlets.LogoutServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
 		<servlet-class>com.virtualpairprogrammers.servlets.HomeServlet</servlet-class>
 	</servlet>
@@ -35,6 +40,11 @@
 	<servlet-mapping>
 		<servlet-name>LoginTraderServlet</servlet-name>
 		<url-pattern>/LoginTraderServlet</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/LogoutServlet</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
